get domains api
